--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Reflex Tester</title>
   </head>
   <body>
+  	<p>Your reaction time: <span id="reactionTime"></span></p>
   	<div id="box"></div>
   </body>
 </html>
