Add playArea div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <title>Reflex Tester</title>
   </head>
   <body>
-  	<p>Your reaction time: <span id="reactionTime"></span></p>
-  	<div id="box"></div>
+  	<div class="container">
+	  	<div class="header">
+	  		<h1 class="title">Reflex Tester</h1>
+	  	</div>
+	  	<p>Your reaction time: <span id="reactionTime"></span></p>
+	  	<div id="playArea"> 
+	  		<div id="box"></div>
+	  	</div>
+	</div>
   </body>
 </html>
